<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70BFDD"
    tools:context=".Activities.AjakanActivity">

    <TextView
        android:id="@+id/tvJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/title_pemantauan"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="101dp"
        android:contentDescription="@string/image_search_soya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJudul"
        app:srcCompat="@drawable/tingkatproduksi2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/ajakan"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_lanjut_ajakan"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/buttonradius"
        android:fontFamily="@font/roboto_medium"
        android:radius="12dp"
        android:text="@string/btPemantauan"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/icon_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shape" />

</androidx.constraintlayout.widget.ConstraintLayout>